# rarime-android-app

./: .gitattributes  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/libs/: Identity.aar  bionet-release.aar  lib-release.aar  noir.aar
app/src/androidTest/java/com/distributedLab/rarime/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/rarilabs/rarime/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rarime.cpp
app/src/main/cpp/include/: witnesscalc_auth.h  witnesscalc_faceRegistryNoInclusion.h  witnesscalc_registerIdentityUniversal.h  witnesscalc_registerIdentityUniversalRSA2048.h  witnesscalc_registerIdentityUniversalRSA4096.h  witnesscalc_registerIdentity_11_256_3_3_576_240_1_864_5_264.h  witnesscalc_registerIdentity_11_256_3_5_576_248_1_1808_5_296.h  witnesscalc_registerIdentity_12_256_3_3_336_232_NA.h  witnesscalc_registerIdentity_21_256_3_4_576_232_NA.h  witnesscalc_registerIdentity_2_256_3_6_336_264_1_2448_3_256.h  witnesscalc_registerIdentity_3_160_3_3_336_200_NA.h  witnesscalc_registerIdentity_3_160_3_4_576_216_1_1512_3_256.h
app/src/main/cpp/include/light/: witnesscalc_registerIdentityLight160.h  witnesscalc_registerIdentityLight224.h  witnesscalc_registerIdentityLight256.h  witnesscalc_registerIdentityLight384.h  witnesscalc_registerIdentityLight512.h
app/src/main/java/com/distributedLab/rarime/: App.kt  BaseConfig.kt  MainActivity.kt
app/src/main/java/com/distributedLab/rarime/base/: Result.kt
app/src/main/java/com/distributedLab/rarime/contracts/: Erc20Contract.java  PoseidonSMT.java  ProofTool.kt  Registration.java
app/src/main/java/com/distributedLab/rarime/data/: ProofTx.kt  SMTProof.kt  TemplateLocalDataSource.kt  TemplateRepository.kt  chains.kt
app/src/main/java/com/distributedLab/rarime/di/: ManagerModule.kt
app/src/main/java/com/distributedLab/rarime/manager/: ApiServiceRemoteData.kt  AuthSvcManager.kt  ContractManager.kt  IdentityManager.kt  PassportManager.kt  RarimoContractManager.kt  SecureSharedPrefsManagerImpl.kt  SecurityManager.kt  SettingsManager.kt  StableCoinContractManager.kt  WalletManager.kt
app/src/main/java/com/distributedLab/rarime/store/: SecureSharedPrefsManager.kt  SecureSharedPrefsManagerImpl.kt
app/src/main/java/com/distributedLab/rarime/util/: AppIconUtil.kt  BiometricUtil.kt  Constants.kt  CountryUtil.kt  DateUtil.kt  Extensions.kt  FileDownloader.kt  GsonWeb3Adapter.kt  IdentityUtil.kt  ImageUtil.kt  LocaleUtil.kt  NumberUtil.kt  RarimoUtils.kt  Screen.kt  SecurityUtil.kt  SendErrorUtil.kt  Shapes.kt  StringUtil.kt  WalletUtil.kt  ZkpUtil.kt
app/src/main/java/com/rarilabs/rarime/: App.kt  BaseConfig.kt  MainActivity.kt  RustLib.kt
app/src/main/java/com/rarilabs/rarime/contracts/: Erc20Contract.java
app/src/main/java/com/rarilabs/rarime/data/: ProofTx.kt  SMTProof.kt  chains.kt
app/src/main/java/com/rarilabs/rarime/di/: ManagerModule.kt
app/src/main/java/com/rarilabs/rarime/earn/: EarnInviteOtherBottomSheet.kt  EarnViewModel.kt  TaskCard.kt
app/src/main/java/com/rarilabs/rarime/manager/: AirDropManager.kt  AuthManager.kt  CosmosManager.kt  DriveBackupManager.kt  Erc20Manager.kt  HiddenPrizeManager.kt  IdentityManager.kt  LikenessManager.kt  NfcManager.kt  NotificationManager.kt  PassportManager.kt  PointsManager.kt  ProofGenerationManager.kt  RarimoContractManager.kt  RegistrationManager.kt  SecurityManager.kt  SettingsManager.kt  StableCoinContractManager.kt  TestContractManager.kt  VotingManager.kt  WalletManager.kt
app/src/main/java/com/rarilabs/rarime/mocked/: mockedData.kt
app/src/main/java/com/rarilabs/rarime/services/: NotificationService.kt  NotificationWorker.kt
app/src/main/java/com/rarilabs/rarime/store/: SecureSharedPrefsManager.kt  SecureSharedPrefsManagerImpl.kt
app/src/main/java/com/rarilabs/rarime/util/: AppIconUtil.kt  BiometricUtil.kt  Constants.kt  CountryUtil.kt  DateUtil.kt  Dg15FileOwn.java  EIP712Utility.kt  ErrorHandler.kt  Extensions.kt  FileDownloader.kt  FileIntegrityChecker.kt  FilePicker.kt  GsonWeb3Adapter.kt  HmacUtil.kt  ImageUtil.kt  InvitationUtil.kt  LocaleUtil.kt  NumberUtil.kt  ParseEDocument.kt  ParseEDocumentFromJson.kt  PkUtil.kt  QueryProofField.kt  Screen.kt  (+12 more)
app/src/main/res/drawable/: app_icon_black.xml  app_icon_gradeint.xml  app_icon_green.xml  app_icon_white.xml  drawable_likeness_face_bg.xml  ic_airdrop.xml  ic_arrow_counter_clockwise.xml  ic_arrow_down.xml  ic_arrow_left.xml  ic_arrow_left_s_line.xml  ic_arrow_right.xml  ic_arrow_right_line.xml  ic_arrow_right_s_line.xml  ic_arrow_right_up_line.xml  ic_arrow_square_out.xml  ic_arrow_up.xml  ic_backspace.xml  ic_backup.xml  ic_bell.xml  ic_bell_fill.xml  ic_body_scan_fill.xml  ic_box_3_line.xml  ic_bulb.xml  ic_calendar_blank.xml  ic_calendar_line.xml  ic_cardholder.xml  ic_cardholder_fill.xml  ic_caret_left.xml  ic_caret_right.xml  ic_caret_up.xml  ic_caret_up_down.xml  ic_carret_down.xml  ic_chart_bar.xml  ic_chart_bar_fill.xml  ic_chart_line.xml  ic_chat.xml  ic_chat_2_line.xml  ic_check.xml  ic_check_line.xml  ic_check_unframed.xml  (+122 more)
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_bg.xml  ic_launcher_black.xml  ic_launcher_cat.xml  ic_launcher_gb_round.xml  ic_launcher_green.xml  ic_launcher_white.xml
app/src/main/res/raw/: anim_nfc_scan.json
app/src/main/res/values/: ic_launcher_bg_background.xml  ic_launcher_black_background.xml  ic_launcher_cat_background.xml  ic_launcher_gb_background.xml  ic_launcher_green_background.xml  strings.xml  themes.xml
app/src/main/res/values-ka/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/xml/: data_extraction_rules.xml  locales_config.xml  provider_paths.xml
app/src/test/java/com/distributedLab/rarime/: ExampleUnitTest.kt
app/src/test/java/com/rarilabs/rarime/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
zkp_assets/: build.gradle.kts
zkp_assets/src/main/assets/: masters_asset.pem
(+748 files in other folders)
